@@ -3,6 +3,7 @@
 = 2.12.0 =
 * WordPress 5.6 compatible.
 * Updated info on add-ons.
+* Fixed checking menu items so that only those that are related to a post type are processed for access checking.
 
 = 2.11.1 =
 * Fixes missing capabilities with user_has_cap filter processing modified in 2.11.0.
